--- a/TPM_Didymos/Project.toml
+++ b/TPM_Didymos/Project.toml
@@ -1,5 +1,5 @@
 [deps]
-Astroshaper = "ab46f4a3-3c83-4d86-98d6-41a8b1a2e76e"
+ThermoPhysicalModeling = "ab46f4a3-3c83-4d86-98d6-41a8b1a2e76e"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 Git = "d7ba0133-e1db-5d97-8f8c-041e4b3a1eb2"
@@ -10,4 +10,4 @@ ScatteredInterpolation = "3f865c0f-6dca-5f4d-999b-29fe1e7e3c92"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
-Astroshaper = "0.0.2"
+ThermoPhysicalModeling = "0.0.3"
