--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ TPM_Kanamaru2021/SHAPE_SFM_49k_v20180804.jld2
 TPM_Kanamaru2021/SHAPE_SFM_49k_v20180804.obj
 
 TPM_Didymos/hera
+TPM_Didymos/kernels
+TPM_Didymos/shape
 TPM_Didymos/hera_study_PO_EMA_2024.tm
 TPM_Didymos/g_06650mm_rad_obj_didb_0000n00000_v001.jld2
 TPM_Didymos/g_06650mm_rad_obj_didb_0000n00000_v001.obj
