Select kernels to be dowloaded in TPM_Didymos (#10)
* Select kernels to be dowloaded

* Update TPM_Didymos.ipynb

* Update url of kernels

* Update TPM_Didymos/TPM_Didymos.ipynb

Correct URL handling

Co-authored-by: Yuto Horikawa <hyrodium@gmail.com>

---------

Co-authored-by: Yuto Horikawa <hyrodium@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ TPM_Kanamaru2021/SHAPE_SFM_49k_v20180804.jld2
 TPM_Kanamaru2021/SHAPE_SFM_49k_v20180804.obj
 
 TPM_Didymos/hera
+TPM_Didymos/kernels
+TPM_Didymos/shape
+TPM_Didymos/temp_maps_final.png
 TPM_Didymos/hera_study_PO_EMA_2024.tm
 TPM_Didymos/g_06650mm_rad_obj_didb_0000n00000_v001.jld2
 TPM_Didymos/g_06650mm_rad_obj_didb_0000n00000_v001.obj
