--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,13 @@
 Manifest.toml
 .ipynb_checkpoints
 
-TPM_Ryugu/spice_kernels
-TPM_Ryugu/hyb2_v03.tm
-TPM_Ryugu/SHAPE_SFM_49k_v20180804.jld2
-TPM_Ryugu/SHAPE_SFM_49k_v20180804.obj
+TPM_Ryugu/kernel
+TPM_Ryugu/shape
 TPM_Ryugu/TPM_Ryugu.jld2
 
 TPM_Kanamaru2021/SHAPE_SFM_49k_v20180804.jld2
 TPM_Kanamaru2021/SHAPE_SFM_49k_v20180804.obj
 
-TPM_Didymos/hera
-TPM_Didymos/kernels
+TPM_Didymos/kernel
 TPM_Didymos/shape
-TPM_Didymos/temp_maps_final.png
-TPM_Didymos/hera_study_PO_EMA_2024.tm
-TPM_Didymos/g_06650mm_rad_obj_didb_0000n00000_v001.jld2
-TPM_Didymos/g_06650mm_rad_obj_didb_0000n00000_v001.obj
-TPM_Didymos/g_50677mm_rad_obj_dida_0000n00000_v001.jld2
-TPM_Didymos/g_50677mm_rad_obj_dida_0000n00000_v001.obj
 TPM_Didymos/TPM_Didymos.jld2
