--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ TPM_Kanamaru2021/SHAPE_SFM_49k_v20180804.obj
 TPM_Didymos/kernel
 TPM_Didymos/shape
 TPM_Didymos/TPM_Didymos.jld2
+TPM_Didymos/temp_maps_final.png
