Nake an output directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,15 @@
 Manifest.toml
 .ipynb_checkpoints
 
-TPM_Ryugu/*.csv
 TPM_Ryugu/kernel
 TPM_Ryugu/shape/*
+TPM_Ryugu/output
 
-!REAMME.md
 !ryugu_test.obj
 
-TPM_Didymos/pri
-TPM_Didymos/sec
 TPM_Didymos/kernel
 TPM_Didymos/shape
-
-!REAMME.md
+TPM_Didymos/output
 
 TPM_Kanamaru2021/SHAPE_SFM_49k_v20180804.obj
 
